# virgil-deprecated

./: .editorconfig  .gitignore  .vala-lint.conf  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  copy-res.sh  lint.sh  meson.build  meson_options.txt  vala-lint.conf
data/: meson.build  virgil.gresource.xml
demo/: Demo.vala  Main.vala  meson.build
demo/Objects/: Player.vala
docs/: FILESTRUCTURE.md
example/: Example.vala  Main.vala  main.vala
lib/: Colour.vala  Config.vala.in  Display.vala  Game.vala  GameObject.vala  GameState.vala  InitFlags.vala  Rectangle.vala  Vector2.vala  Vector3.vala  meson.build
lib/Core/: EventManager.vala  FramerateManager.vala  KeyboardManager.vala  MouseManager.vala  RenderManager.vala  WindowManager.vala
lib/Core/Data Type/: Rectangle.vala  Vector2f.vala  Vector2i.vala  Vector3f.vala  Vector3i.vala
lib/Engine/: BaseType.vala  EventHandler.vala  EventManager.vala  FramerateHandler.vala  FramerateManager.vala  GameRenderer.vala  GameWindow.vala  KeyboardHandler.vala  KeyboardManager.vala  MouseHandler.vala  MouseManager.vala  RenderManager.vala  WindowManager.vala
lib/FileSystem/: Asset.vala  ContentManager.vala
lib/FileSystem/Items/: ContentItem.vala
lib/Graphics/: Colour.vala  Font.vala  FontHinting.vala  FontStyle.vala  RenderQueue.vala  RenderQueueMode.vala  Sprite.vala  SpriteBatch.vala  SpriteBatchMode.vala  Surface.vala  Texture2D.vala  TextureType.vala  stb_image.vapi
lib/Graphics/Items/: RenderQueueItem.vala  RenderQueueItemType.vala  SpriteBatchItem.vala
lib/IO/: Asset.vala  AssetType.vala  File.vala  FileUtility.vala
lib/Input/: Input.vala  Key.vala  KeyState.vala  MouseButton.vala
lib/Input/Items/: KeyItem.vala  MouseItem.vala
lib/Interface/: IGameObject.vala
lib/Math/: Vector2f.vala  Vector2i.vala
lib/Math/Ray Casting/: Ray.vala
lib/Utility/: Log.vala  LogLevel.vala
src/: Camera.vala  Colour.vala  Config.vala.conf  Constants.vala  Game.vala  GameState.vala  GameWindow.vala  Grid.vala  InitFlag.vala  InitFlags.vala  Point.vala  Rectangle.vala  Vector2.vala  Virgil.vala  config.vala.in  main.vala  meson.build
src/Base/: Event.vala  Framerate.vala  Renderer.vala  Window.vala
src/Core/: EventHandler.vala  FramerateHandler.vala  GameRenderer.vala  GameWindow.vala  Renderer.vala  Window.vala
src/Debug/: BlockTimer.vala  Log.vala  LogLevel.vala  Print.vala  PrintLevel.vala
src/Engine/Interfaces/: IGenericComponent.vala
src/Example/: Example.vala  meson.build
src/Example/Objects/: Player.vala
src/Filesystem/: Filesystem.vala
src/Graphics/: BlendMode.vala  DynamicTexture.vala  DynamicTexture2D.vala  Font.vala  RenderQueue.vala  RenderQueueCall.vala  RenderSortMode.vala  StaticTexture.vala  StaticTexture2D.vala  Surface.vala  TargetTexture2D.vala  Texture2D.vala  TextureRaw.vala  TextureType.vala  TiledTexture2D.vala
src/Graphics/Cache/: FontTexture.vala
src/Input/: Button.vala  Controller.vala  Gamepad.vala  Key.vala  KeyState.vala  Keyboard.vala  KeyboardKey.vala  KeyboardState.vala  Mouse.vala  MouseButton.vala
src/Math/: Math.vala  Perlin.vala  PerlinGenerator.vala
src/Platform/darwin/: README.md
src/Platform/linux/: README.md
src/Scene/: Scene.vala  SceneManager.vala
src/SceneManagement/: Scene.vala  SceneManager.vala
src/Scenes/: Scene.vala  SceneManager.vala
src/Stb/: Image.vala
src/Util/: SDL.vala
src/Virgil/: Game.vala  GameObject.vala  GameState.vala  meson.build
src/Virgil/Engine/: EventController.vala  EventManager.vala  FramerateController.vala  FramerateManager.vala  KeyboardManager.vala  Resource.vala  WindowManager.vala
src/Virgil/Graphics/: Colour.vala  Sprite.vala
src/Virgil/Input/: Key.vala
src/Virgil/Math/: Vector2D.vala  Vector2i.vala
subprojects/: libvvfs.wrap
tests/: meson.build
tests/camera/: Main.vala  meson.build
tests/fonts/: Main.vala  meson.build
tests/scenes/: Main.vala  meson.build
tests/window/: Main.vala  meson.build
vapi/: sdl2.vapi  stb_image.vapi
