project_source = files (
    'main.vala',
    'Game.vala',
    'Colour.vala',
    'Rectangle.vala',

    'Util/SDL.vala',

    'Base/Window.vala',
    'Base/Renderer.vala',
    'Base/Framerate.vala',
    'Base/Event.vala',

    'Graphics/Texture2D.vala',
    'Graphics/StaticTexture.vala',
    'Graphics/DynamicTexture.vala'
)
